--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta name="Content-Type" content="text/html; charset=UTF-8" />
-    <title>github :: tim horton</title>
+    <title>github :: teneighty</title>
     <style type="text/css" media="screen">
       * { margin: 0; padding: 0; }
       #container { width: 100%; text-align: center; margin: 100px 0; }
