--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
     <title>github :: teneighty</title>
     <style type="text/css" media="screen">
       * { margin: 0; padding: 0; }
-      #container { width: 100%; text-align: center; margin: 100px 0; }
+      #container { 
+          width: 100%; text-align: center; margin: 100px 0; 
+      }
+      ul { list-style-type: none; }
+      li { display: none;         }
     </style>
   </head>
   <body>
     <div id="container">
-      <h2>ugh</h2>
+        <div>
+            <h2>teneighty</h2>
+        </div>
+        <div>
+            <ul>
+                <li><a hef="http://github.com/teneighty/Papps">Papps</a></li>
+            </ul>
+        </div>
     </div>
   </body>
 </html>
