Fixed list style.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           width: 100%; text-align: center; margin: 100px 0; 
       }
       ul { list-style-type: none; }
-      li { display: none;         }
+      li { display: inline;       }
     </style>
   </head>
   <body>
