--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div>
             <ul>
-                <li><a hef="http://github.com/teneighty/Papps">Papps</a></li>
+                <li><a href="http://github.com/teneighty/Papps">Papps</a></li>
             </ul>
         </div>
     </div>
