--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       #container { 
           width: 100%; text-align: center; margin: 100px 0; 
       }
+      #menu { margin: 10px; }
       ul { list-style-type: none; }
       li { display: inline;       }
     </style>
@@ -18,7 +19,7 @@
             <h2>teneighty</h2>
         </div>
         <div>
-            <ul>
+            <ul id="menu">
                 <li><a href="http://github.com/teneighty/Papps">Papps</a></li>
             </ul>
         </div>
