--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
           width: 100%; text-align: center; margin: 100px 0; 
       }
       #menu { margin: 10px; }
-      ul { list-style-type: none; }
-      li { display: inline;       }
+      #menu ul { list-style-type: none; }
+      #menu li { display: inline;       }
+      #menu a { color: #000; }
     </style>
   </head>
   <body>
