--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div>
             <ul id="menu">
-                <li><a href="http://github.com/teneighty/Papps">Papps</a></li>
+                <li><a href="http://github.com/teneighty/Papps">papps</a></li>
             </ul>
         </div>
     </div>
