--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@ title: Tim Horton
 ---
 
 <div id="home">
+    <!--
   <h1>Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+  -->
   
   <h1>Projects</h1>
   <ul class="posts">
-    <li><a href="http://github.com/teneighty/papps/">Papps:</a> Haskell paste bin.</li>
+    <!-- li><a href="http://github.com/teneighty/papps/">Papps:</a> Haskell paste bin.</li -->
+    <li>See <a href="http://www.github.com/teneighty/">Github/teneighty</a></li>
   </ul>
 </div>
   
