hakyll version of site

--- a/index.html
+++ b/index.html
@@ -1,22 +1,36 @@
----
-layout: default
-title: Tim Horton
----
+<!DOCTYPE html>
+<html>
+<head>
+   <title>Tim Horton</title>
+   <meta name="author" content="Tim Horton" />
+   <link rel="stylesheet" href="/css/default.css" type="text/css" media="screen, projection" />
+</head>
+<body>
 
-<div id="home">
-    <!--
-  <h1>Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-  -->
+<div class="site">
+  <div class="title">
+    <a href="/">Tim Horton</a>
+  </div>
   
+  
+<div id="home">
   <h1>Projects</h1>
   <ul class="posts">
-    <!-- li><a href="http://github.com/teneighty/papps/">Papps:</a> Haskell paste bin.</li -->
     <li>See <a href="http://www.github.com/teneighty/">Github/teneighty</a></li>
   </ul>
 </div>
   
+
+  
+  <div class="footer">
+    <div class="contact">
+      <p>
+        Tim Horton<br />
+        tmhorton@gmail.com
+      </p>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
