Added built site.

--- a/.lacy/index.html
+++ b/.lacy/index.html
@@ -6,8 +6,12 @@ title: Tim Horton
 <div id="home">
   <h1>Projects</h1>
   <ul class="posts">
-    <!-- li><a href="http://github.com/teneighty/papps/">Papps:</a> Haskell paste bin.</li -->
-    <li>See <a href="http://www.github.com/teneighty/">Github/teneighty</a></li>
+    <li><a href="http://www.github.com/teneighty/lacy">Lacy</a></li>
+  </ul>
+
+  <h1>Social</h1>
+  <ul class="posts">
+    <li><a href="http://www.github.com/teneighty/">Github/teneighty</a></li>
   </ul>
 </div>
   
