Fixed lacy link

--- a/.lacy/index.html
+++ b/.lacy/index.html
@@ -6,7 +6,7 @@ title: Tim Horton
 <div id="home">
   <h1>Projects</h1>
   <ul class="posts">
-    <li><a href="http://teneighty.github.com/teneighty/lacy">Lacy</a></li>
+    <li><a href="http://teneighty.github.com/lacy">Lacy</a></li>
   </ul>
 
   <h1>Social</h1>
