--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <div id="home">
   <h1>Projects</h1>
   <ul class="posts">
-    <li><a href="http://teneighty.github.com/teneighty/lacy">Lacy</a></li>
+    <li><a href="http://teneighty.github.com/lacy">Lacy</a></li>
   </ul>
 
   <h1>Social</h1>
