Added moss to homepage

--- a/src/_templates/base.html
+++ b/src/_templates/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tim Horton</title>
+    <title>{{title}}</title>
     <meta name="author" content="Tim Horton" />
     <link rel="stylesheet" href="./styles/default.css" type="text/css" media="screen, projection" />
     <script type="text/javascript">
@@ -24,20 +24,7 @@
             <a href="/">Tim Horton</a>
         </div>
 
-        <h1>Projects</h1>
-
-<ul class="posts">
-    <li><a href="http://teneighty.github.com/lacy">Lacy</a></li>
-    <li><a href="http://teneighty.github.com/lacy">Moss</a></li>
-</ul>
-
-
-<h1>Social</h1>
-
-<ul class="posts">
-    <li><a href="http://www.github.com/teneighty/">Github/teneighty</a></li>
-</ul>
-
+        {{content}}
     
         <div class="footer">
             <div class="contact">
