Fixed link to moss

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <ul class="posts">
     <li><a href="http://teneighty.github.com/lacy">Lacy</a></li>
-    <li><a href="http://teneighty.github.com/lacy">Moss</a></li>
+    <li><a href="http://teneighty.github.com/moss">Moss</a></li>
 </ul>
 
 
