Switch to twitter

--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 
         <section>
             <ul>
-<li><a href="http://www.github.com/teneighty/">github/</a></li>
-<li><a href="http://www.facebook.com/tim.horton.1080/">facebook/</a></li>
-</ul>
-
+                <li><a href="http://www.github.com/teneighty/">github/</a></li>
+                <li><a href="https://twitter.com/timothymhorton">twitter/</a></li>
+            </ul>
         </section>
 
         <hr />
